force-app/main/default/objects/custom_create265__c/custom_create265__c.object-meta.xml
<CustomObject>
    <label>Custom created object265</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects265</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>