force-app/main/default/objects/custom_create265__c/fields/custom_create_265field692__c.field-meta.xml
<CustomField>
    <fullName>custom_create_265field692__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 265field692</label>
    <type>Checkbox</type>
</CustomField>